RAS/AMD/ATL: Fix array overflow in get_logical_coh_st_fabric_id_mi300() (jsc#PED-7618).

--- a/series.conf
+++ b/series.conf
@@ -16433,6 +16433,7 @@
 	patches.suse/EDAC-amd64-Use-new-AMD-Address-Translation-Library.patch
 	patches.suse/Documentation-RAS-Add-index-and-address-translation-sectio.patch
 	patches.suse/RAS-AMD-ATL-Add-MI300-support.patch
+	patches.suse/RAS-AMD-ATL-Fix-array-overflow-in-get_logical_coh_st_fabri.patch
 
 	# out-of-tree patches
 	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
