--- a/series.conf
+++ b/series.conf
@@ -45141,6 +45141,7 @@
 	patches.suse/Documentation-RAS-Add-index-and-address-translation-sectio.patch
 	patches.suse/RAS-AMD-ATL-Add-MI300-support.patch
 	patches.suse/RAS-AMD-ATL-Fix-array-overflow-in-get_logical_coh_st_fabri.patch
+	patches.suse/RAS-AMD-ATL-Add-MI300-DRAM-to-normalized-address-translati.patch
 
 	# out-of-tree patches
 	patches.suse/cifs-Fix-UAF-in-cifs_demultiplex_thread-.patch
