--- a/series.conf
+++ b/series.conf
@@ -6950,6 +6950,7 @@
 	patches.suse/efivarfs-convert-to-ctime-accessor-functions.patch
 	patches.suse/bpf-convert-to-ctime-accessor-functions.patch
 	patches.suse/reiserfs-Check-the-return-value-from-__getblk.patch
+	patches.suse/fs-buffer.c-disable-per-CPU-buffer_head-cache-for-is.patch
 	patches.suse/io_uring-rename-kiocb_end_write-local-helper.patch
 	patches.suse/fs-add-kerneldoc-to-file_-start-end-_write-helpers.patch
 	patches.suse/fs-create-kiocb_-start-end-_write-helpers.patch
