sched/core: Fix RQCF_ACT_SKIP leak (git fixes (sched)).

--- a/series.conf
+++ b/series.conf
@@ -12254,6 +12254,7 @@
 	patches.suse/sched-psi-Update-poll-rtpoll-in-relevant-comments.patch
 	patches.suse/sched-fair-Remove-duplicate-include.patch
 	patches.suse/sched-nohz-Update-comments-about-NEWILB_KICK.patch
+	patches.suse/sched-core-Fix-RQCF_ACT_SKIP-leak.patch
 	patches.suse/sched-Add-cpus_share_resources-API.patch
 	patches.suse/sched-fair-Scan-cluster-before-scanning-LLC-in-wake-up-path.patch
 	patches.suse/sched-fair-Use-candidate-prev-recent_used-CPU-if-scanning-failed-for-cluster-wakeup.patch
