selftests: net: let big_tcp test cope with slow env (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16405,6 +16405,7 @@
 	patches.suse/selftests-net-cut-more-slack-for-gro-fwd-tests.patch
 	patches.suse/selftests-net-avoid-just-another-constant-wait.patch
 	patches.suse/atm-idt77252-fix-a-memleak-in-open_card_ubr0.patch
+	patches.suse/selftests-net-let-big_tcp-test-cope-with-slow-env.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
