--- a/series.conf
+++ b/series.conf
@@ -16403,6 +16403,7 @@
 	patches.suse/crypto-ccp-Fix-null-pointer-dereference-in-__sev_pla.patch
 	patches.suse/crypto-algif_hash-Remove-bogus-SGL-free-on-zero-leng.patch
 	patches.suse/selftests-net-cut-more-slack-for-gro-fwd-tests.patch
+	patches.suse/selftests-net-avoid-just-another-constant-wait.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
