--- a/series.conf
+++ b/series.conf
@@ -16410,6 +16410,7 @@
 	patches.suse/wifi-iwlwifi-fix-double-free-bug.patch
 	patches.suse/wifi-cfg80211-fix-wiphy-delayed-work-queueing.patch
 	patches.suse/wifi-mac80211-fix-RCU-use-in-TDLS-fast-xmit.patch
+	patches.suse/wifi-mac80211-fix-waiting-for-beacons-logic.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
