--- a/series.conf
+++ b/series.conf
@@ -16407,6 +16407,7 @@
 	patches.suse/atm-idt77252-fix-a-memleak-in-open_card_ubr0.patch
 	patches.suse/selftests-net-let-big_tcp-test-cope-with-slow-env.patch
 	patches.suse/selftests-cmsg_ipv6-repeat-the-exact-packet.patch
+	patches.suse/wifi-iwlwifi-fix-double-free-bug.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
