--- a/series.conf
+++ b/series.conf
@@ -16406,6 +16406,7 @@
 	patches.suse/selftests-net-avoid-just-another-constant-wait.patch
 	patches.suse/atm-idt77252-fix-a-memleak-in-open_card_ubr0.patch
 	patches.suse/selftests-net-let-big_tcp-test-cope-with-slow-env.patch
+	patches.suse/selftests-cmsg_ipv6-repeat-the-exact-packet.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
