--- a/series.conf
+++ b/series.conf
@@ -16404,6 +16404,7 @@
 	patches.suse/crypto-algif_hash-Remove-bogus-SGL-free-on-zero-leng.patch
 	patches.suse/selftests-net-cut-more-slack-for-gro-fwd-tests.patch
 	patches.suse/selftests-net-avoid-just-another-constant-wait.patch
+	patches.suse/atm-idt77252-fix-a-memleak-in-open_card_ubr0.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
