--- a/series.conf
+++ b/series.conf
@@ -16408,6 +16408,7 @@
 	patches.suse/selftests-net-let-big_tcp-test-cope-with-slow-env.patch
 	patches.suse/selftests-cmsg_ipv6-repeat-the-exact-packet.patch
 	patches.suse/wifi-iwlwifi-fix-double-free-bug.patch
+	patches.suse/wifi-cfg80211-fix-wiphy-delayed-work-queueing.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
