--- a/series.conf
+++ b/series.conf
@@ -16400,6 +16400,7 @@
 	patches.suse/serial-max310x-fail-probe-if-clock-crystal-is-unstab.patch
 	patches.suse/serial-max310x-prevent-infinite-while-loop-in-port-s.patch
 	patches.suse/misc-fastrpc-Mark-all-sessions-as-invalid-in-cb_remo.patch
+	patches.suse/crypto-ccp-Fix-null-pointer-dereference-in-__sev_pla.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
