--- a/series.conf
+++ b/series.conf
@@ -16411,6 +16411,7 @@
 	patches.suse/wifi-cfg80211-fix-wiphy-delayed-work-queueing.patch
 	patches.suse/wifi-mac80211-fix-RCU-use-in-TDLS-fast-xmit.patch
 	patches.suse/wifi-mac80211-fix-waiting-for-beacons-logic.patch
+	patches.suse/wifi-iwlwifi-exit-eSR-only-after-the-FW-does.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
