--- a/series.conf
+++ b/series.conf
@@ -5585,6 +5585,7 @@
 	patches.suse/gve-unify-driver-name-usage.patch
 	patches.suse/net-fec-recycle-pages-for-transmitted-XDP-frame.patch
 	patches.suse/net-fec-increase-the-size-of-tx-ring-and-update.patch
+	patches.suse/net-fec-use-netdev_err_once-instead-of-netdev_err.patch
 	patches.suse/net-dsa-Removed-unneeded-of_node_put-in-felix_p.patch
 	patches.suse/octeontx2-pf-Add-additional-check-for-MCAM-rule.patch
 	patches.suse/wifi-airo-avoid-uninitialized-warning-in-airo_g.patch
