net: dsa: bcm_sf2: Fix possible memory leak in bcm_sf2_mdio_register() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -11939,6 +11939,7 @@
 	patches.suse/perf-benchmark-fix-seccomp_unotify-benchmark-for-32-bit.patch
 	patches.suse/bonding-Return-pointer-to-data-after-pull-on-skb.patch
 	patches.suse/tcp-Fix-listen-warning-with-v4-mapped-v6-address.patch
+	patches.suse/net-dsa-bcm_sf2-Fix-possible-memory-leak-in-bcm_sf2_.patch
 	patches.suse/ice-fix-over-shifted-variable.patch
 	patches.suse/tcp-allow-again-tcp_disconnect-when-threads-are-wait.patch
 	patches.suse/netlink-specs-devlink-fix-reply-command-values.patch
