--- a/series.conf
+++ b/series.conf
@@ -11982,6 +11982,7 @@
 	patches.suse/net-usb-smsc95xx-Fix-an-error-code-in-smsc95xx_reset.patch
 	patches.suse/neighbor-tracing-Move-pin6-inside-CONFIG_IPV6-y-section.patch
 	patches.suse/octeon_ep-update-BQL-sent-bytes-before-ringing-doorb.patch
+	patches.suse/net-mdio-mux-fix-C45-access-returning-EIO-after-API-.patch
 	patches.suse/tcp_bpf-properly-release-resources-on-error-paths.patch
 	patches.suse/net-phy-bcm7xxx-Add-missing-16nm-EPHY-statistics.patch
 	patches.suse/wifi-cfg80211-use-system_unbound_wq-for-wiphy-work.patch
