--- a/series.conf
+++ b/series.conf
@@ -12110,6 +12110,7 @@
 	patches.suse/igb-Fix-potential-memory-leak-in-igb_add_ethtool_nfc.patch
 	patches.suse/igc-Fix-ambiguity-in-the-ethtool-advertising.patch
 	patches.suse/i40e-sync-next_to_clean-and-next_to_process-for-prog.patch
+	patches.suse/net-ethernet-adi-adin1110-Fix-uninitialized-variable.patch
 	patches.suse/net-ieee802154-adf7242-Fix-some-potential-buffer-ove.patch
 	patches.suse/net-chelsio-cxgb4-add-an-error-code-check-in-t4_load.patch
 	patches.suse/net-usb-smsc95xx-Fix-uninit-value-access-in-smsc95xx.patch
