lib/string_helpers: Change returned value of the strreplace() (bsc#1219692).

--- a/series.conf
+++ b/series.conf
@@ -729,6 +729,7 @@
 	patches.suse/0023-drm-i2c-tda998x-Replace-all-non-returning-strlcpy-wi.patch
 	patches.suse/acpi-Replace-struct-acpi_table_slit-1-element-array-.patch
 	patches.suse/jbd2-Avoid-printing-outside-the-boundary-of-the-buff.patch
+	patches.suse/lib-string_helpers-Change-returned-value-of-the-strr.patch
 	patches.suse/um-Use-HOST_DIR-for-mrproper.patch
 	patches.suse/arm64-Fix-dangling-references-to-Documentation-arm64.patch
 	patches.suse/perf-arm-spe-Fix-a-dangling-Documentation-arm64-reference.patch
