net: spider_net: Use size_add() in call to struct_size() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -12356,6 +12356,7 @@
 	patches.suse/octeon_ep-support-to-fetch-firmware-info.patch
 	patches.suse/mlxsw-Use-size_mul-in-call-to-struct_size.patch
 	patches.suse/tls-Use-size_add-in-call-to-struct_size.patch
+	patches.suse/net-spider_net-Use-size_add-in-call-to-struct_size.patch
 	patches.suse/octeon_ep-restructured-interrupt-handlers.patch
 	patches.suse/net-ethernet-mellanox-Convert-to-platform-remove-cal.patch
 	patches.suse/ice-prefix-clock-timer-command-enumeration-values-wi.patch
