--- a/series.conf
+++ b/series.conf
@@ -12358,6 +12358,7 @@
 	patches.suse/tls-Use-size_add-in-call-to-struct_size.patch
 	patches.suse/net-spider_net-Use-size_add-in-call-to-struct_size.patch
 	patches.suse/octeon_ep-restructured-interrupt-handlers.patch
+	patches.suse/net-ethernet-mtk_wed-fix-EXT_INT_STATUS_RX_FBUF-defi.patch
 	patches.suse/net-ethernet-mellanox-Convert-to-platform-remove-cal.patch
 	patches.suse/ice-prefix-clock-timer-command-enumeration-values-wi.patch
 	patches.suse/ice-retry-acquiring-hardware-semaphore-during-cross-.patch
