--- a/series.conf
+++ b/series.conf
@@ -12404,6 +12404,7 @@
 	patches.suse/net-implement-lockless-SO_PRIORITY.patch
 	patches.suse/handshake-Fix-sign-of-socket-file-descriptor-fields.patch
 	patches.suse/handshake-Fix-sign-of-key_serial_t-fields.patch
+	patches.suse/net-sfp-add-quirk-for-FS-s-2.5G-copper-SFP.patch
 	patches.suse/net-Tree-wide-Replace-xdp_do_flush_map-with-xdp_do_f.patch
 	patches.suse/overflow-add-DEFINE_FLEX-for-on-stack-allocs.patch
 	patches.suse/ice-ice_sched_remove_elems-replace-1-elem-array-para.patch
