--- a/series.conf
+++ b/series.conf
@@ -14101,6 +14101,7 @@
 	patches.suse/net-phylink-initialize-carrier-state-at-creation.patch
 	patches.suse/r8169-respect-userspace-disabling-IFF_MULTICAST.patch
 	patches.suse/virtio-vsock-Fix-uninit-value-in-virtio_transport_re.patch
+	patches.suse/net-enetc-shorten-enetc_setup_xdp_prog-error-message.patch
 	patches.suse/i40e-Do-not-call-devlink_port_type_clear.patch
 	patches.suse/i40e-Fix-devlink-port-unregistering.patch
 	patches.suse/ice-Fix-SRIOV-LAG-disable-on-non-compliant-aggregate.patch
