--- a/series.conf
+++ b/series.conf
@@ -14174,6 +14174,7 @@
 	patches.suse/vhost-vdpa-fix-use-after-free-in-vhost_vdpa_probe.patch
 	patches.suse/xen-events-avoid-using-info_for_irq-in-xen_send_IPI_.patch
 	patches.suse/xen-events-fix-delayed-eoi-list-handling.patch
+	patches.suse/ipvlan-add-ipvlan_route_v6_outbound-helper.patch
 	patches.suse/tty-Fix-uninit-value-access-in-ppp_sync_receive.patch
 	patches.suse/tg3-Move-the-rt-x_dropped-counters-to-tg3_napi.patch
 	patches.suse/tg3-Increment-tx_dropped-in-tg3_tso_bug.patch
