--- a/series.conf
+++ b/series.conf
@@ -14176,6 +14176,7 @@
 	patches.suse/xen-events-fix-delayed-eoi-list-handling.patch
 	patches.suse/ipvlan-add-ipvlan_route_v6_outbound-helper.patch
 	patches.suse/tty-Fix-uninit-value-access-in-ppp_sync_receive.patch
+	patches.suse/net-hns3-fix-add-VLAN-fail-issue.patch
 	patches.suse/tg3-Move-the-rt-x_dropped-counters-to-tg3_napi.patch
 	patches.suse/tg3-Increment-tx_dropped-in-tg3_tso_bug.patch
 	patches.suse/pds_core-fix-up-some-format-truncation-complaints.patch
