net: hns3: add barrier in vf mailbox reply process (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14177,6 +14177,7 @@
 	patches.suse/ipvlan-add-ipvlan_route_v6_outbound-helper.patch
 	patches.suse/tty-Fix-uninit-value-access-in-ppp_sync_receive.patch
 	patches.suse/net-hns3-fix-add-VLAN-fail-issue.patch
+	patches.suse/net-hns3-add-barrier-in-vf-mailbox-reply-process.patch
 	patches.suse/tg3-Move-the-rt-x_dropped-counters-to-tg3_napi.patch
 	patches.suse/tg3-Increment-tx_dropped-in-tg3_tso_bug.patch
 	patches.suse/pds_core-fix-up-some-format-truncation-complaints.patch
