--- a/series.conf
+++ b/series.conf
@@ -14179,6 +14179,7 @@
 	patches.suse/net-hns3-fix-add-VLAN-fail-issue.patch
 	patches.suse/net-hns3-add-barrier-in-vf-mailbox-reply-process.patch
 	patches.suse/net-hns3-fix-incorrect-capability-bit-display-for-co.patch
+	patches.suse/net-hns3-fix-out-of-bounds-access-may-occur-when-coa.patch
 	patches.suse/tg3-Move-the-rt-x_dropped-counters-to-tg3_napi.patch
 	patches.suse/tg3-Increment-tx_dropped-in-tg3_tso_bug.patch
 	patches.suse/pds_core-fix-up-some-format-truncation-complaints.patch
