net: hns3: fix variable may not initialized problem in hns3_init_mac_addr() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14180,6 +14180,7 @@
 	patches.suse/net-hns3-add-barrier-in-vf-mailbox-reply-process.patch
 	patches.suse/net-hns3-fix-incorrect-capability-bit-display-for-co.patch
 	patches.suse/net-hns3-fix-out-of-bounds-access-may-occur-when-coa.patch
+	patches.suse/net-hns3-fix-variable-may-not-initialized-problem-in.patch
 	patches.suse/tg3-Move-the-rt-x_dropped-counters-to-tg3_napi.patch
 	patches.suse/tg3-Increment-tx_dropped-in-tg3_tso_bug.patch
 	patches.suse/pds_core-fix-up-some-format-truncation-complaints.patch
