--- a/series.conf
+++ b/series.conf
@@ -14181,6 +14181,7 @@
 	patches.suse/net-hns3-fix-incorrect-capability-bit-display-for-co.patch
 	patches.suse/net-hns3-fix-out-of-bounds-access-may-occur-when-coa.patch
 	patches.suse/net-hns3-fix-variable-may-not-initialized-problem-in.patch
+	patches.suse/net-hns3-fix-VF-reset-fail-issue.patch
 	patches.suse/tg3-Move-the-rt-x_dropped-counters-to-tg3_napi.patch
 	patches.suse/tg3-Increment-tx_dropped-in-tg3_tso_bug.patch
 	patches.suse/pds_core-fix-up-some-format-truncation-complaints.patch
