--- a/series.conf
+++ b/series.conf
@@ -15708,6 +15708,7 @@
 	patches.suse/scsi-mpi3mr-Support-for-preallocation-of-SGL-BSG-data-buffers-part-2.patch
 	patches.suse/scsi-mpi3mr-Support-for-preallocation-of-SGL-BSG-data-buffers-part-3.patch
 	patches.suse/scsi-mpi3mr-Update-driver-version-to-8.5.1.0.0.patch
+	patches.suse/scsi-fnic-Modify-definitions-to-sync-with-VIC-firmware.patch
 	patches.suse/scsi-lpfc-Change-VMID-driver-load-time-parameters-to.patch
 	patches.suse/scsi-lpfc-Reinitialize-an-NPIV-s-VMID-data-structure.patch
 	patches.suse/scsi-lpfc-Move-determination-of-vmid_flag-after-VMID.patch
