--- a/series.conf
+++ b/series.conf
@@ -15711,6 +15711,7 @@
 	patches.suse/scsi-fnic-Modify-definitions-to-sync-with-VIC-firmware.patch
 	patches.suse/scsi-fnic-Add-and-use-fnic-number.patch
 	patches.suse/scsi-fnic-Add-and-improve-log-messages.patch
+	patches.suse/scsi-fnic-Rename-wq_copy-to-hw_copy_wq.patch
 	patches.suse/scsi-lpfc-Change-VMID-driver-load-time-parameters-to.patch
 	patches.suse/scsi-lpfc-Reinitialize-an-NPIV-s-VMID-data-structure.patch
 	patches.suse/scsi-lpfc-Move-determination-of-vmid_flag-after-VMID.patch
