--- a/series.conf
+++ b/series.conf
@@ -15719,6 +15719,7 @@
 	patches.suse/scsi-fnic-Remove-usage-of-host_lock.patch
 	patches.suse/scsi-fnic-Add-support-for-multiqueue-MQ-in-fnic_main.c.patch
 	patches.suse/scsi-fnic-Add-support-for-multiqueue-MQ-in-fnic-driver.patch
+	patches.suse/scsi-fnic-Improve-logs-and-add-support-for-multiqueue-MQ.patch
 	patches.suse/scsi-lpfc-Change-VMID-driver-load-time-parameters-to.patch
 	patches.suse/scsi-lpfc-Reinitialize-an-NPIV-s-VMID-data-structure.patch
 	patches.suse/scsi-lpfc-Move-determination-of-vmid_flag-after-VMID.patch
