scsi: fnic: Increment driver version (jsc#PED-7888).

--- a/series.conf
+++ b/series.conf
@@ -15720,6 +15720,7 @@
 	patches.suse/scsi-fnic-Add-support-for-multiqueue-MQ-in-fnic_main.c.patch
 	patches.suse/scsi-fnic-Add-support-for-multiqueue-MQ-in-fnic-driver.patch
 	patches.suse/scsi-fnic-Improve-logs-and-add-support-for-multiqueue-MQ.patch
+	patches.suse/scsi-fnic-Increment-driver-version.patch
 	patches.suse/scsi-lpfc-Change-VMID-driver-load-time-parameters-to.patch
 	patches.suse/scsi-lpfc-Reinitialize-an-NPIV-s-VMID-data-structure.patch
 	patches.suse/scsi-lpfc-Move-determination-of-vmid_flag-after-VMID.patch
