--- a/series.conf
+++ b/series.conf
@@ -15716,6 +15716,7 @@
 	patches.suse/scsi-fnic-Refactor-and-redefine-fnic.h-for-multiqueue.patch
 	patches.suse/scsi-fnic-Modify-ISRs-to-support-multiqueue-MQ.patch
 	patches.suse/scsi-fnic-Define-stats-to-track-multiqueue-MQ-IOs.patch
+	patches.suse/scsi-fnic-Remove-usage-of-host_lock.patch
 	patches.suse/scsi-lpfc-Change-VMID-driver-load-time-parameters-to.patch
 	patches.suse/scsi-lpfc-Reinitialize-an-NPIV-s-VMID-data-structure.patch
 	patches.suse/scsi-lpfc-Move-determination-of-vmid_flag-after-VMID.patch
