scsi: fnic: Define stats to track multiqueue (MQ) IOs (jsc#PED-7888).

--- a/series.conf
+++ b/series.conf
@@ -15715,6 +15715,7 @@
 	patches.suse/scsi-fnic-Get-copy-workqueue-count-and-interrupt-mode-from-config.patch
 	patches.suse/scsi-fnic-Refactor-and-redefine-fnic.h-for-multiqueue.patch
 	patches.suse/scsi-fnic-Modify-ISRs-to-support-multiqueue-MQ.patch
+	patches.suse/scsi-fnic-Define-stats-to-track-multiqueue-MQ-IOs.patch
 	patches.suse/scsi-lpfc-Change-VMID-driver-load-time-parameters-to.patch
 	patches.suse/scsi-lpfc-Reinitialize-an-NPIV-s-VMID-data-structure.patch
 	patches.suse/scsi-lpfc-Move-determination-of-vmid_flag-after-VMID.patch
