drm/i915/gvt: Fix uninitialized variable in handle_mmio() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16429,6 +16429,7 @@
 	patches.suse/wifi-mac80211-fix-RCU-use-in-TDLS-fast-xmit.patch
 	patches.suse/wifi-mac80211-fix-waiting-for-beacons-logic.patch
 	patches.suse/wifi-iwlwifi-exit-eSR-only-after-the-FW-does.patch
+	patches.suse/drm-i915-gvt-Fix-uninitialized-variable-in-handle_mm.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
