--- a/series.conf
+++ b/series.conf
@@ -16432,6 +16432,7 @@
 	patches.suse/drm-i915-gvt-Fix-uninitialized-variable-in-handle_mm.patch
 	patches.suse/mmc-sdhci-pci-o2micro-Fix-a-warm-reboot-issue-that-d.patch
 	patches.suse/hwmon-aspeed-pwm-tacho-mutex-for-tach-reading.patch
+	patches.suse/hwmon-coretemp-Fix-out-of-bounds-memory-access.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
