--- a/series.conf
+++ b/series.conf
@@ -16430,6 +16430,7 @@
 	patches.suse/wifi-mac80211-fix-waiting-for-beacons-logic.patch
 	patches.suse/wifi-iwlwifi-exit-eSR-only-after-the-FW-does.patch
 	patches.suse/drm-i915-gvt-Fix-uninitialized-variable-in-handle_mm.patch
+	patches.suse/mmc-sdhci-pci-o2micro-Fix-a-warm-reboot-issue-that-d.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
