--- a/series.conf
+++ b/series.conf
@@ -16431,6 +16431,7 @@
 	patches.suse/wifi-iwlwifi-exit-eSR-only-after-the-FW-does.patch
 	patches.suse/drm-i915-gvt-Fix-uninitialized-variable-in-handle_mm.patch
 	patches.suse/mmc-sdhci-pci-o2micro-Fix-a-warm-reboot-issue-that-d.patch
+	patches.suse/hwmon-aspeed-pwm-tacho-mutex-for-tach-reading.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
