hwmon: (coretemp) Fix bogus core_id to attr name mapping (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16433,6 +16433,7 @@
 	patches.suse/mmc-sdhci-pci-o2micro-Fix-a-warm-reboot-issue-that-d.patch
 	patches.suse/hwmon-aspeed-pwm-tacho-mutex-for-tach-reading.patch
 	patches.suse/hwmon-coretemp-Fix-out-of-bounds-memory-access.patch
+	patches.suse/hwmon-coretemp-Fix-bogus-core_id-to-attr-name-mappin.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
