--- a/series.conf
+++ b/series.conf
@@ -14186,6 +14186,7 @@
 	patches.suse/net-mvneta-fix-calls-to-page_pool_get_stats.patch
 	patches.suse/ppp-limit-MRU-to-64K.patch
 	patches.suse/bonding-stop-the-device-in-bond_setup_by_slave.patch
+	patches.suse/net-ethernet-cortina-Fix-max-RX-frame-define.patch
 	patches.suse/tg3-Move-the-rt-x_dropped-counters-to-tg3_napi.patch
 	patches.suse/tg3-Increment-tx_dropped-in-tg3_tso_bug.patch
 	patches.suse/pds_core-fix-up-some-format-truncation-complaints.patch
