--- a/series.conf
+++ b/series.conf
@@ -14188,6 +14188,7 @@
 	patches.suse/bonding-stop-the-device-in-bond_setup_by_slave.patch
 	patches.suse/net-ethernet-cortina-Fix-max-RX-frame-define.patch
 	patches.suse/net-ethernet-cortina-Handle-large-frames.patch
+	patches.suse/net-ethernet-cortina-Fix-MTU-max-setting.patch
 	patches.suse/tg3-Move-the-rt-x_dropped-counters-to-tg3_napi.patch
 	patches.suse/tg3-Increment-tx_dropped-in-tg3_tso_bug.patch
 	patches.suse/pds_core-fix-up-some-format-truncation-complaints.patch
