--- a/series.conf
+++ b/series.conf
@@ -14190,6 +14190,7 @@
 	patches.suse/net-ethernet-cortina-Handle-large-frames.patch
 	patches.suse/net-ethernet-cortina-Fix-MTU-max-setting.patch
 	patches.suse/r8169-add-handling-DASH-when-DASH-is-disabled.patch
+	patches.suse/8169-fix-network-lost-after-resume-on-DASH-systems.patch
 	patches.suse/tg3-Move-the-rt-x_dropped-counters-to-tg3_napi.patch
 	patches.suse/tg3-Increment-tx_dropped-in-tg3_tso_bug.patch
 	patches.suse/pds_core-fix-up-some-format-truncation-complaints.patch
