--- a/series.conf
+++ b/series.conf
@@ -16247,6 +16247,7 @@
 	patches.suse/ALSA-hda-realtek-Enable-headset-mic-on-Lenovo-M70-Ge.patch
 	patches.suse/arm64-scs-Work-around-full-LTO-issue-with-dynamic-SC.patch
 	patches.suse/arm64-Rename-ARM64_WORKAROUND_2966298.patch
+	patches.suse/arm64-errata-Add-Cortex-A510-speculative-unprivileged-load-workaround.patch
 	patches.suse/arm64-entry-fix-ARM64_WORKAROUND_SPECULATIVE_UNPRIV_LOAD.patch
 	patches.suse/arm64-ptrace-Don-t-flush-ZA-ZT-storage-when-writing-.patch
 	patches.suse/arm64-fpsimd-Remove-spurious-check-for-SVE-support.patch
