--- a/series.conf
+++ b/series.conf
@@ -15671,6 +15671,7 @@
 	patches.suse/bnxt_en-Fix-RCU-locking-for-ntuple-filters-in-bnxt_r.patch
 	patches.suse/mlxbf_gige-Fix-intermittent-no-ip-issue.patch
 	patches.suse/mlxbf_gige-Enable-the-GigE-port-in-mlxbf_gige_open.patch
+	patches.suse/net-ethernet-cortina-Drop-TSO-support.patch
 	patches.suse/arm64-dts-hisilicon-hikey970-pmic-fix-regulator-cells-properties.patch
 	patches.suse/arm64-dts-imx8mm-Reduce-GPU-to-nominal-speed.patch
 	patches.suse/arm64-dts-armada-3720-turris-mox-set-irq-type-for-RTC.patch
