--- a/series.conf
+++ b/series.conf
@@ -16042,6 +16042,7 @@
 	patches.suse/KVM-guest-memfd-fix-unused-function-warning
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/KVM-x86-add-missing-depends-on-KVM
+	patches.suse/x86-kvm-Do-not-try-to-disable-kvmclock-if-it-was-not-enabl.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
 	patches.suse/mfd-intel-lpss-Revert-Add-missing-check-for-platform.patch
