--- a/series.conf
+++ b/series.conf
@@ -12191,6 +12191,7 @@
 	patches.suse/x86-srso-fix-sbpb-enablement-for-possible-future-fixed-hw.patch
 	patches.suse/x86-srso-Print-mitigation-for-retbleed-IBPB-case.patch
 	patches.suse/x86-srso-fix-vulnerability-reporting-for-missing-microcode.patch
+	patches.suse/x86-srso-Move-retbleed-IBPB-check-into-existing-has_microc.patch
 	patches.suse/x86-resctrl-rename-arch_has_sparse_bitmaps.patch
 	patches.suse/x86-resctrl-enable-non-contiguous-cbms-in-intel-cat.patch
 	patches.suse/x86-resctrl-add-sparse_masks-file-in-info.patch
