x86/entry/ia32: Ensure s32 is sign extended to s64 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16365,6 +16365,7 @@
 	patches.suse/platform-x86-intel-uncore-freq-Fix-types-in-sysfs-ca.patch
 	patches.suse/platform-x86-intel-ifs-Call-release_firmware-when-ha.patch
 	patches.suse/x86-CPU-AMD-Add-X86_FEATURE_ZEN5
+	patches.suse/x86-entry-ia32-Ensure-s32-is-sign-extended-to-s64.patch
 	patches.suse/clocksource-Skip-watchdog-check-for-large-watchdog-i.patch
 	patches.suse/tick-sched-Preserve-number-of-idle-sleeps-across-CPU.patch
 	patches.suse/genirq-Initialize-resend_node-hlist-for-all-interrup.patch
