--- a/series.conf
+++ b/series.conf
@@ -7029,6 +7029,7 @@
 	patches.suse/x86-amd_nb-add-pci-ids-for-amd-family-1ah-based-models.patch
 	patches.suse/hwmon-k10temp-add-thermal-support-for-amd-family-1ah-based-models.patch
 	patches.suse/edac-amd64-add-support-for-amd-family-1ah-models-00h-1fh-and-40h-4fh.patch
+	patches.suse/x86-MCE-Always-save-CS-register-on-AMD-Zen-IF-Poison-error.patch
 	patches.suse/x86-sev-Do-not-handle-VC-for-DR7-read-write.patch
 	patches.suse/x86-sev-Make-enc_dec_hypercall-accept-a-size-instead-of-npages
 	patches.suse/x86-microcode-amd-rip-out-static-buffers.patch
