--- a/series.conf
+++ b/series.conf
@@ -16459,6 +16459,7 @@
 	patches.suse/hwmon-aspeed-pwm-tacho-mutex-for-tach-reading.patch
 	patches.suse/hwmon-coretemp-Fix-out-of-bounds-memory-access.patch
 	patches.suse/hwmon-coretemp-Fix-bogus-core_id-to-attr-name-mappin.patch
+	patches.suse/nvme-host-fix-the-updating-of-the-firmware-version.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
