KVM: s390: add stat counter for shadow gmap events (jsc#PED-5439).

--- a/series.conf
+++ b/series.conf
@@ -13418,6 +13418,7 @@
 	patches.suse/ARM-9320-1-fix-stack-depot-IRQ-stack-filter.patch
 	patches.suse/ARM-9321-1-memset-cast-the-constant-byte-to-unsigned.patch
 	patches.suse/ARM-9323-1-mm-Fix-ARCH_LOW_ADDRESS_LIMIT-when-CONFIG.patch
+	patches.suse/KVM-s390-add-stat-counter-for-shadow-gmap-events.patch
 	patches.suse/KVM-s390-add-tracepoint-in-gmap-notifier.patch
 	patches.suse/KVM-x86-Fix-lapic-timer-interrupt-lost-after-loading.patch
 	patches.suse/KVM-x86-Clear-bit12-of-ICR-after-APIC-write-VM-exit.patch
