KVM: s390: fix cc for successful PQAP (git-fixes bsc#1219808).

--- a/series.conf
+++ b/series.conf
@@ -16444,6 +16444,7 @@
 	patches.suse/serial-max310x-fail-probe-if-clock-crystal-is-unstab.patch
 	patches.suse/serial-max310x-prevent-infinite-while-loop-in-port-s.patch
 	patches.suse/misc-fastrpc-Mark-all-sessions-as-invalid-in-cb_remo.patch
+	patches.suse/KVM-s390-fix-cc-for-successful-PQAP.patch
 	patches.suse/crypto-ccp-Fix-null-pointer-dereference-in-__sev_pla.patch
 	patches.suse/crypto-algif_hash-Remove-bogus-SGL-free-on-zero-leng.patch
 	patches.suse/selftests-net-cut-more-slack-for-gro-fwd-tests.patch
