s390/qeth: Fix potential loss of L3-IP@ in case of network issues (git-fixes bsc#1219811).

--- a/series.conf
+++ b/series.conf
@@ -16459,6 +16459,7 @@
 	patches.suse/wifi-mac80211-fix-RCU-use-in-TDLS-fast-xmit.patch
 	patches.suse/wifi-mac80211-fix-waiting-for-beacons-logic.patch
 	patches.suse/wifi-iwlwifi-exit-eSR-only-after-the-FW-does.patch
+	patches.suse/s390-qeth-Fix-potential-loss-of-L3-IP-in-case-of-network-issues.patch
 	patches.suse/drm-i915-gvt-Fix-uninitialized-variable-in-handle_mm.patch
 	patches.suse/mmc-sdhci-pci-o2micro-Fix-a-warm-reboot-issue-that-d.patch
 	patches.suse/hwmon-aspeed-pwm-tacho-mutex-for-tach-reading.patch
