--- a/series.conf
+++ b/series.conf
@@ -15273,6 +15273,7 @@
 	patches.suse/crypto-scomp-fix-req-dst-buffer-overflow.patch
 	patches.suse/asm-generic-Fix-32-bit-__generic_cmpxchg_local.patch
 	patches.suse/s390-vfio-ap-unpin-pages-on-gisc-registration-failure.patch
+	patches.suse/s390-vfio-ap-fix-sysfs-status-attribute-for-AP-queue-devices.patch
 	patches.suse/s390-ptrace-handle-setting-of-fpc-register-correctly.patch
 	patches.suse/KVM-s390-fix-setting-of-fpc-register.patch
 	patches.suse/i40e-increase-max-descriptors-for-XL710.patch
