--- a/series.conf
+++ b/series.conf
@@ -15272,6 +15272,7 @@
 	patches.suse/crypto-sahara-do-not-resize-req-src-when-doing-hash-.patch
 	patches.suse/crypto-scomp-fix-req-dst-buffer-overflow.patch
 	patches.suse/asm-generic-Fix-32-bit-__generic_cmpxchg_local.patch
+	patches.suse/s390-boot-always-align-vmalloc-area-on-segment-boundary.patch
 	patches.suse/s390-vfio-ap-unpin-pages-on-gisc-registration-failure.patch
 	patches.suse/s390-vfio-ap-fix-sysfs-status-attribute-for-AP-queue-devices.patch
 	patches.suse/s390-ptrace-handle-setting-of-fpc-register-correctly.patch
