scsi: storvsc: Fix ring buffer size calculation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16368,6 +16368,7 @@
 	patches.suse/cxl-region-Fix-overflow-issue-in-alloc_hpa.patch
 	patches.suse/mm-writeback-fix-possible-divide-by-zero-in-wb_dirty_limits-again.patch
 	patches.suse/tracing-trigger-Fix-to-return-error-if-failed-to-alloc-snapshot.patch
+	patches.suse/msft-hv-2939-scsi-storvsc-Fix-ring-buffer-size-calculation.patch
 	patches.suse/regulator-ti-abb-don-t-use-devm_platform_ioremap_res.patch
 	patches.suse/firewire-core-correct-documentation-of-fw_csr_string.patch
 	patches.suse/HID-hidraw-fix-a-problem-of-memory-leak-in-hidraw_re.patch
