--- a/series.conf
+++ b/series.conf
@@ -16376,6 +16376,7 @@
 	patches.suse/HID-bpf-remove-double-fdget.patch
 	patches.suse/HID-bpf-actually-free-hdev-memory-after-attaching-a-.patch
 	patches.suse/nfc-nci-free-rx_data_reassembly-skb-on-NCI-device-cl.patch
+	patches.suse/msft-hv-2940-hv_netvsc-Fix-race-condition-between-netvsc_probe-an.patch
 	patches.suse/nvme-rdma-Fix-transfer-length-when-write_generate-re.patch
 	patches.suse/iommu-Allow-ops-default_domain-to-work-when-CONFIG_IOMMU_DMA
 	patches.suse/drm-tegra-Do-not-assume-that-a-NULL-domain-means-no-DMA-IOMMU
