hv_netvsc: Register VF in netvsc_probe if NET_DEVICE_REGISTER missed (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16450,6 +16450,7 @@
 	patches.suse/selftests-net-cut-more-slack-for-gro-fwd-tests.patch
 	patches.suse/selftests-net-avoid-just-another-constant-wait.patch
 	patches.suse/atm-idt77252-fix-a-memleak-in-open_card_ubr0.patch
+	patches.suse/msft-hv-2942-hv_netvsc-Register-VF-in-netvsc_probe-if-NET_DEVICE_.patch
 	patches.suse/selftests-net-let-big_tcp-test-cope-with-slow-env.patch
 	patches.suse/selftests-cmsg_ipv6-repeat-the-exact-packet.patch
 	patches.suse/wifi-iwlwifi-fix-double-free-bug.patch
