--- a/series.conf
+++ b/series.conf
@@ -16304,6 +16304,7 @@
 	patches.suse/selftest-Don-t-reuse-port-for-SO_INCOMING_CPU-test.patch
 	patches.suse/wifi-mac80211-fix-potential-sta-link-leak.patch
 	patches.suse/wifi-iwlwifi-fix-a-memory-corruption.patch
+	patches.suse/msft-hv-2938-hv_netvsc-Calculate-correct-ring-size-when-PAGE_SIZE.patch
 	patches.suse/selftests-net-fix-rps_default_mask-with-32-CPUs.patch
 	patches.suse/selftests-netdevsim-fix-the-udp_tunnel_nic-test.patch
 	patches.suse/net-fill-in-MODULE_DESCRIPTION-s-for-rvu_mbox.patch
