--- a/series.conf
+++ b/series.conf
@@ -45136,6 +45136,7 @@
 	patches.suse/serial-max310x-fail-probe-if-clock-crystal-is-unstab.patch
 	patches.suse/misc-fastrpc-Mark-all-sessions-as-invalid-in-cb_remo.patch
 	patches.suse/KVM-s390-fix-cc-for-successful-PQAP.patch
+	patches.suse/s390-qeth-Fix-potential-loss-of-L3-IP-in-case-of-network-issues.patch
 
 	# ras/ras edac-for-next
 	patches.suse/RAS-Introduce-AMD-Address-Translation-Library.patch
