--- a/series.conf
+++ b/series.conf
@@ -23745,6 +23745,7 @@
 	patches.suse/NFSv3-handle-out-of-order-write-replies.patch
 	patches.suse/nfsd-remove-warn_on_once.patch
 	patches.suse/nfsd-fix-RELEASE_LOCKOWNER.patch
+	patches.suse/NFS-avoid-infinite-loop-in-pnfs_update_layout.patch
 
 	# other
 	patches.suse/pstore_disable_efi_backend_by_default.patch
