perf test: Remove atomics from test_loop to avoid test failures (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16294,6 +16294,7 @@
 	patches.suse/tools-headers-UAPI-Sync-include-uapi-linux-perf_event.h-header-with-the-kernel.patch
 	patches.suse/perf-header-Support-num-and-width-of-branch-counters.patch
 	patches.suse/perf-tools-Add-branch-counter-knob.patch
+	patches.suse/perf-test-Remove-atomics-from-test_loop-to-avoid-test-failures.patch
 	patches.suse/perf-test-Basic-branch-counter-support.patch
 	patches.suse/libapi-Add-missing-linux-types.h-header-to-get-the-_.patch
 	patches.suse/libsubcmd-Fix-memory-leak-in-uniq.patch
