--- a/series.conf
+++ b/series.conf
@@ -16301,6 +16301,7 @@
 	patches.suse/perf-tests-Skip-pipe-test-if-noploop-symbol-is-missing.patch
 	patches.suse/perf-test-record-probe_libc_inet_pton-Fix-call-chain-match-on-powerpc.patch
 	patches.suse/libapi-Add-missing-linux-types.h-header-to-get-the-_.patch
+	patches.suse/perf-docs-Fix-man-page-formatting-for-perf-lock.patch
 	patches.suse/libsubcmd-Fix-memory-leak-in-uniq.patch
 	patches.suse/scsi-fnic-unlock-on-error-path-in-fnic_queuecommand.patch
 	patches.suse/dmaengine-fix-NULL-pointer-in-channel-unregistration.patch
