perf tests lib: Add perf_has_symbol.sh (bsc#1219617).

--- a/series.conf
+++ b/series.conf
@@ -16297,6 +16297,7 @@
 	patches.suse/perf-test-Remove-atomics-from-test_loop-to-avoid-test-failures.patch
 	patches.suse/perf-test-Basic-branch-counter-support.patch
 	patches.suse/perf-header-Fix-segfault-on-build_mem_topology-error-path.patch
+	patches.suse/perf-tests-lib-Add-perf_has_symbol.sh.patch
 	patches.suse/libapi-Add-missing-linux-types.h-header-to-get-the-_.patch
 	patches.suse/libsubcmd-Fix-memory-leak-in-uniq.patch
 	patches.suse/scsi-fnic-unlock-on-error-path-in-fnic_queuecommand.patch
