--- a/series.conf
+++ b/series.conf
@@ -16311,6 +16311,7 @@
 	patches.suse/perf-header-Fix-one-memory-leakage-in-perf_event__fprintf_event_update.patch
 	patches.suse/perf-hisi-ptt-Fix-one-memory-leakage-in-hisi_ptt_process_auxtrace_event.patch
 	patches.suse/perf-genelf-Set-ELF-program-header-addresses-properly.patch
+	patches.suse/perf-unwind-libdw-Handle-JIT-generated-DSOs-properly.patch
 	patches.suse/libsubcmd-Fix-memory-leak-in-uniq.patch
 	patches.suse/scsi-fnic-unlock-on-error-path-in-fnic_queuecommand.patch
 	patches.suse/dmaengine-fix-NULL-pointer-in-channel-unregistration.patch
