--- a/series.conf
+++ b/series.conf
@@ -16309,6 +16309,7 @@
 	patches.suse/perf-stat-Exit-perf-stat-if-parse-groups-fails.patch
 	patches.suse/perf-stat-Fix-help-message-for-metric-no-threshold-option.patch
 	patches.suse/perf-header-Fix-one-memory-leakage-in-perf_event__fprintf_event_update.patch
+	patches.suse/perf-hisi-ptt-Fix-one-memory-leakage-in-hisi_ptt_process_auxtrace_event.patch
 	patches.suse/libsubcmd-Fix-memory-leak-in-uniq.patch
 	patches.suse/scsi-fnic-unlock-on-error-path-in-fnic_queuecommand.patch
 	patches.suse/dmaengine-fix-NULL-pointer-in-channel-unregistration.patch
