--- a/series.conf
+++ b/series.conf
@@ -16314,6 +16314,7 @@
 	patches.suse/perf-unwind-libdw-Handle-JIT-generated-DSOs-properly.patch
 	patches.suse/perf-unwind-libunwind-Fix-base-address-for-.eh_frame.patch
 	patches.suse/perf-vendor-events-Remove-UTF-8-characters-from-cmn.json.patch
+	patches.suse/perf-env-Avoid-recursively-taking-env-bpf_progs.lock.patch
 	patches.suse/libsubcmd-Fix-memory-leak-in-uniq.patch
 	patches.suse/scsi-fnic-unlock-on-error-path-in-fnic_queuecommand.patch
 	patches.suse/dmaengine-fix-NULL-pointer-in-channel-unregistration.patch
