perf unwind-libunwind: Fix base address for .eh_frame (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16312,6 +16312,7 @@
 	patches.suse/perf-hisi-ptt-Fix-one-memory-leakage-in-hisi_ptt_process_auxtrace_event.patch
 	patches.suse/perf-genelf-Set-ELF-program-header-addresses-properly.patch
 	patches.suse/perf-unwind-libdw-Handle-JIT-generated-DSOs-properly.patch
+	patches.suse/perf-unwind-libunwind-Fix-base-address-for-.eh_frame.patch
 	patches.suse/libsubcmd-Fix-memory-leak-in-uniq.patch
 	patches.suse/scsi-fnic-unlock-on-error-path-in-fnic_queuecommand.patch
 	patches.suse/dmaengine-fix-NULL-pointer-in-channel-unregistration.patch
