--- a/series.conf
+++ b/series.conf
@@ -16317,6 +16317,7 @@
 	patches.suse/perf-env-Avoid-recursively-taking-env-bpf_progs.lock.patch
 	patches.suse/perf-stat-Fix-hard-coded-LL-miss-units.patch
 	patches.suse/libsubcmd-Fix-memory-leak-in-uniq.patch
+	patches.suse/perf-db-export-Fix-missing-reference-count-get-in-call_path_from_sample.patch
 	patches.suse/scsi-fnic-unlock-on-error-path-in-fnic_queuecommand.patch
 	patches.suse/dmaengine-fix-NULL-pointer-in-channel-unregistration.patch
 	patches.suse/dmaengine-idxd-Move-dma_free_coherent-out-of-spinloc.patch
