--- a/series.conf
+++ b/series.conf
@@ -16313,6 +16313,7 @@
 	patches.suse/perf-genelf-Set-ELF-program-header-addresses-properly.patch
 	patches.suse/perf-unwind-libdw-Handle-JIT-generated-DSOs-properly.patch
 	patches.suse/perf-unwind-libunwind-Fix-base-address-for-.eh_frame.patch
+	patches.suse/perf-vendor-events-Remove-UTF-8-characters-from-cmn.json.patch
 	patches.suse/libsubcmd-Fix-memory-leak-in-uniq.patch
 	patches.suse/scsi-fnic-unlock-on-error-path-in-fnic_queuecommand.patch
 	patches.suse/dmaengine-fix-NULL-pointer-in-channel-unregistration.patch
