--- a/series.conf
+++ b/series.conf
@@ -16304,6 +16304,7 @@
 	patches.suse/perf-docs-Fix-man-page-formatting-for-perf-lock.patch
 	patches.suse/perf-test-record-user-regs-Fix-mask-for-vg-register.patch
 	patches.suse/perf-vendor-events-arm64-AmpereOne-Rename-BPU_FLUSH_MEM_FAULT-to-GPC_FLUSH_MEM_FAULT.patch
+	patches.suse/perf-vendor-events-powerpc-Update-datasource-event-name-to-fix-duplicate-events.patch
 	patches.suse/libsubcmd-Fix-memory-leak-in-uniq.patch
 	patches.suse/scsi-fnic-unlock-on-error-path-in-fnic_queuecommand.patch
 	patches.suse/dmaengine-fix-NULL-pointer-in-channel-unregistration.patch
