--- a/series.conf
+++ b/series.conf
@@ -16308,6 +16308,7 @@
 	patches.suse/perf-mem-Fix-error-on-hybrid-related-to-availability-of-mem-event-in-a-PMU.patch
 	patches.suse/perf-stat-Exit-perf-stat-if-parse-groups-fails.patch
 	patches.suse/perf-stat-Fix-help-message-for-metric-no-threshold-option.patch
+	patches.suse/perf-header-Fix-one-memory-leakage-in-perf_event__fprintf_event_update.patch
 	patches.suse/libsubcmd-Fix-memory-leak-in-uniq.patch
 	patches.suse/scsi-fnic-unlock-on-error-path-in-fnic_queuecommand.patch
 	patches.suse/dmaengine-fix-NULL-pointer-in-channel-unregistration.patch
