--- a/series.conf
+++ b/series.conf
@@ -16460,6 +16460,7 @@
 	patches.suse/drm-amd-Don-t-init-MEC2-firmware-when-it-fails-to-lo.patch
 	patches.suse/drm-amd-display-Add-NULL-check-for-kzalloc-in-amdgpu.patch
 	patches.suse/drm-amdgpu-Fix-missing-error-code-in-gmc_v6-7-8-9_0_.patch
+	patches.suse/tools-headers-x86-cpufeatures-Sync-with-the-kernel-sources-to-pick-TDX-Zen-APIC-MSR-fence-changes.patch
 	patches.suse/perf-evlist-Fix-evlist__new_default-for-1-core-PMU.patch
 	patches.suse/phy-renesas-rcar-gen3-usb2-Fix-returning-wrong-error.patch
 	patches.suse/phy-ti-phy-omap-usb2-Fix-NULL-pointer-dereference-fo.patch
