--- a/series.conf
+++ b/series.conf
@@ -16460,6 +16460,7 @@
 	patches.suse/drm-amd-Don-t-init-MEC2-firmware-when-it-fails-to-lo.patch
 	patches.suse/drm-amd-display-Add-NULL-check-for-kzalloc-in-amdgpu.patch
 	patches.suse/drm-amdgpu-Fix-missing-error-code-in-gmc_v6-7-8-9_0_.patch
+	patches.suse/tools-arch-x86-Sync-the-msr-index.h-copy-with-the-kernel-sources-to-pick-IA32_MKTME_KEYID_PARTITIONING.patch
 	patches.suse/tools-headers-x86-cpufeatures-Sync-with-the-kernel-sources-to-pick-TDX-Zen-APIC-MSR-fence-changes.patch
 	patches.suse/perf-evlist-Fix-evlist__new_default-for-1-core-PMU.patch
 	patches.suse/phy-renesas-rcar-gen3-usb2-Fix-returning-wrong-error.patch
@@ -16548,7 +16549,6 @@
 	patches.suse/EDAC-amd64-Add-MI300-row-retirement-support.patch
 
 	# out-of-tree patches
-	patches.suse/sync-tools-arch-header-for-support-branch-counters-logging.patch
 	patches.suse/fnic-move-fnic_fnic_flush_tx-to-a-work-queue.patch
 	patches.suse/revert-scsi-fcoe-fix-potential-deadlock-on-fip-ctlr_lock.patch
 
