--- a/series.conf
+++ b/series.conf
@@ -16058,6 +16058,7 @@
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/KVM-x86-add-missing-depends-on-KVM
 	patches.suse/KVM-x86-Consolidate-flags-for-__linearize.patch
+	patches.suse/KVM-x86-Add-an-emulation-flag-for-implicit-system-ac.patch
 	patches.suse/x86-kvm-Do-not-try-to-disable-kvmclock-if-it-was-not-enabl.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
