KVM: x86: Add X86EMUL_F_INVLPG and pass it in em_invlpg() (jsc#PED-7322).

--- a/series.conf
+++ b/series.conf
@@ -16059,6 +16059,7 @@
 	patches.suse/KVM-x86-add-missing-depends-on-KVM
 	patches.suse/KVM-x86-Consolidate-flags-for-__linearize.patch
 	patches.suse/KVM-x86-Add-an-emulation-flag-for-implicit-system-ac.patch
+	patches.suse/KVM-x86-Add-X86EMUL_F_INVLPG-and-pass-it-in-em_invlp.patch
 	patches.suse/x86-kvm-Do-not-try-to-disable-kvmclock-if-it-was-not-enabl.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
