--- a/series.conf
+++ b/series.conf
@@ -16061,6 +16061,7 @@
 	patches.suse/KVM-x86-Add-an-emulation-flag-for-implicit-system-ac.patch
 	patches.suse/KVM-x86-Add-X86EMUL_F_INVLPG-and-pass-it-in-em_invlp.patch
 	patches.suse/KVM-x86-mmu-Drop-non-PA-bits-when-getting-GFN-for-gu.patch
+	patches.suse/KVM-x86-Add-use-kvm_vcpu_is_legal_cr3-to-check-CR3-s.patch
 	patches.suse/x86-kvm-Do-not-try-to-disable-kvmclock-if-it-was-not-enabl.patch
 	patches.suse/thermal-intel-hfi-Add-syscore-callbacks-for-system-w.patch
 	patches.suse/hwspinlock-qcom-Remove-IPQ6018-SOC-specific-compatib.patch
