USB: gadget: Fix use-after-free Read in usb_udc_uevent() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32596,6 +32596,7 @@
 	patches.suse/USB-serial-fix-tty-port-initialized-comments.patch
 	patches.suse/usb-xhci_plat_remove-avoid-NULL-dereference.patch
 	patches.suse/USB-HCD-Fix-URB-giveback-issue-in-tasklet-function.patch
+	patches.suse/USB-gadget-Fix-use-after-free-Read-in-usb_udc_uevent.patch
 	patches.suse/usb-core-fix-repeated-words-in-comments.patch
 	patches.suse/usb-typec-tcpm-fix-repeated-words-in-comments.patch
 	patches.suse/USB-xhci-Fix-comment-typo.patch
