--- a/series.conf
+++ b/series.conf
@@ -34420,6 +34420,7 @@
 	patches.suse/usb-typec-Remove-retimers-properly.patch
 	patches.suse/usb-gadget-udc-xilinx-replace-memcpy-with-memcpy_toi.patch
 	patches.suse/usb-dwc2-fix-wrong-order-of-phy_power_on-and-phy_ini.patch
+	patches.suse/USB-gadget-Fix-obscure-lockdep-violation-for-udc_mut.patch
 	patches.suse/USB-core-Prevent-nested-device-reset-calls.patch
 	patches.suse/media-mceusb-Use-new-usb_control_msg_-routines.patch
 	patches.suse/usb-gadget-mass_storage-Fix-cdrom-data-transfers-on-.patch
