--- a/blacklist.conf
+++ b/blacklist.conf
@@ -630,7 +630,7 @@ eee87853794187f6adbe19533ed79c8b44b36a91 # corner case, wait until threaded v2 c
 42a11bf5c5436e91b040aeb04063be1710bb9f9c # corner case, wait until threaded v2 cpuset is more stable/cleaner
 ab76e7206b672b2e8818cb121a04506956d6b223 # zns target code needs be upated first
 b648ab487f31bc4c38941bc770ea97fe394304bb # we don't have the relevant code
-0db213ea8eed5534a5169e807f28103cbc9d23df # would require a backport of the gadget bus API, which is extremely intrusive
+0db213ea8eed5534a5169e807f28103cbc9d23df # later reverted for causing regressions
 2a587b9ad052e7e92e508aea90c1e2ae433c1908 # ARCH_ASPEED=n
 332924973725e8cdcc783c175f68cf7e162cb9e5 # we don't care about i386
 db886979683a8360ced9b24ab1125ad0c4d2cf76 # we already have this commit 
