usb: gadget: udc: core: Offload usb_udc_vbus_handler processing (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -42172,6 +42172,7 @@
 	patches.suse/USB-dwc3-fix-use-after-free-on-core-driver-unbind.patch
 	patches.suse/usb-typec-ucsi-Fix-command-cancellation.patch
 	patches.suse/usb-typec-Fix-fast_role_swap_current-show-function.patch
+	patches.suse/usb-gadget-udc-core-Offload-usb_udc_vbus_handler-pro.patch
 	patches.suse/staging-octeon-delete-my-name-from-TODO-contact.patch
 	patches.suse/msft-hv-2809-scsi-storvsc-Always-set-no_report_opcodes.patch
 	patches.suse/scsi-lpfc-Fix-incorrect-big-endian-type-assignment-i.patch
