usb: gadget: udc: core: Prevent soft_connect_store() race (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -42173,6 +42173,7 @@
 	patches.suse/usb-typec-ucsi-Fix-command-cancellation.patch
 	patches.suse/usb-typec-Fix-fast_role_swap_current-show-function.patch
 	patches.suse/usb-gadget-udc-core-Offload-usb_udc_vbus_handler-pro.patch
+	patches.suse/usb-gadget-udc-core-Prevent-soft_connect_store-race.patch
 	patches.suse/staging-octeon-delete-my-name-from-TODO-contact.patch
 	patches.suse/msft-hv-2809-scsi-storvsc-Always-set-no_report_opcodes.patch
 	patches.suse/scsi-lpfc-Fix-incorrect-big-endian-type-assignment-i.patch
