USB: gadget: core: Add missing kerneldoc for vbus_work (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -43526,6 +43526,7 @@
 	patches.suse/USB-core-Fix-race-by-not-overwriting-udev-descriptor.patch
 	patches.suse/usb-ehci-add-workaround-for-chipidea-PORTSC.PEC-bug.patch
 	patches.suse/USB-core-Fix-oversight-in-SuperSpeed-initialization.patch
+	patches.suse/USB-gadget-core-Add-missing-kerneldoc-for-vbus_work.patch
 	patches.suse/USB-gadget-f_mass_storage-Fix-unused-variable-warnin.patch
 	patches.suse/usb-dwc3-meson-g12a-do-post-init-to-fix-broken-usb-a.patch
 	patches.suse/usb-typec-bus-verify-partner-exists-in-typec_altmode.patch
