usb: gadget: udc: Handle gadget_connect failure during bind operation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -44409,6 +44409,7 @@
 	patches.suse/tty-8250-Add-Brainboxes-Oxford-Semiconductor-based-q.patch
 	patches.suse/tty-n_gsm-fix-race-condition-in-status-line-change-o.patch
 	patches.suse/usb-dwc2-fix-possible-NULL-pointer-dereference-cause.patch
+	patches.suse/usb-gadget-udc-Handle-gadget_connect-failure-during-.patch
 	patches.suse/usb-chipidea-Fix-DMA-overwrite-for-Tegra.patch
 	patches.suse/usb-chipidea-Simplify-Tegra-DMA-alignment-code.patch
 	patches.suse/USB-usbip-fix-stub_dev-hub-disconnect.patch
