net: stmmac: avoid rx queue overrun (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14202,6 +14202,7 @@
 	patches.suse/r8169-add-handling-DASH-when-DASH-is-disabled.patch
 	patches.suse/8169-fix-network-lost-after-resume-on-DASH-systems.patch
 	patches.suse/net-stmmac-fix-rx-budget-limit-check.patch
+	patches.suse/net-stmmac-avoid-rx-queue-overrun.patch
 	patches.suse/tg3-Move-the-rt-x_dropped-counters-to-tg3_napi.patch
 	patches.suse/tg3-Increment-tx_dropped-in-tg3_tso_bug.patch
 	patches.suse/pds_core-fix-up-some-format-truncation-complaints.patch
