pds_core: use correct index to mask irq (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14205,6 +14205,7 @@
 	patches.suse/net-stmmac-avoid-rx-queue-overrun.patch
 	patches.suse/tg3-Move-the-rt-x_dropped-counters-to-tg3_napi.patch
 	patches.suse/tg3-Increment-tx_dropped-in-tg3_tso_bug.patch
+	patches.suse/pds_core-use-correct-index-to-mask-irq.patch
 	patches.suse/pds_core-fix-up-some-format-truncation-complaints.patch
 	patches.suse/ice-dpll-fix-initial-lock-status-of-dpll.patch
 	patches.suse/ice-dpll-fix-check-for-dpll-input-priority-range.patch
