--- a/series.conf
+++ b/series.conf
@@ -14227,6 +14227,7 @@
 	patches.suse/net-mlx5e-Reduce-the-size-of-icosq_str.patch
 	patches.suse/net-mlx5e-Check-return-value-of-snprintf-writing-to-.patch
 	patches.suse/net-mlx5e-Check-return-value-of-snprintf-writing-to--1b2bd0c0.patch
+	patches.suse/macvlan-Don-t-propagate-promisc-change-to-lower-dev-.patch
 	patches.suse/ALSA-hda-realtek-Add-Dell-ALC295-to-pin-fall-back-ta.patch
 	patches.suse/ALSA-hda-realtek-Enable-Mute-LED-on-HP-255-G8.patch
 	patches.suse/ALSA-hda-realtek-Enable-internal-speaker-of-ASUS-K65.patch
