net: wangxun: fix kernel panic due to null pointer (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14362,6 +14362,7 @@
 	patches.suse/msft-hv-2916-x86-hyperv-Use-atomic_try_cmpxchg-to-micro-optimize-.patch
 	patches.suse/usb-aqc111-check-packet-for-fixup-for-true-limit.patch
 	patches.suse/stmmac-dwmac-loongson-Add-architecture-dependency.patch
+	patches.suse/net-wangxun-fix-kernel-panic-due-to-null-pointer.patch
 	patches.suse/octeontx2-pf-Fix-memory-leak-during-interface-down.patch
 	patches.suse/net-fill-in-MODULE_DESCRIPTION-s-for-SOCK_DIAG-modul.patch
 	patches.suse/msft-hv-2913-hv_netvsc-fix-race-of-netvsc-and-VF-register_netdevi.patch
