net: veth: fix ethtool stats reporting (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14376,6 +14376,7 @@
 	patches.suse/nfc-virtual_ncidev-Add-variable-to-check-if-ndev-is-.patch
 	patches.suse/net-usb-qmi_wwan-claim-interface-4-for-ZTE-MF290.patch
 	patches.suse/octeontx2-pf-Fix-ntuple-rule-creation-to-direct-pack.patch
+	patches.suse/net-veth-fix-ethtool-stats-reporting.patch
 	patches.suse/ice-remove-ptp_tx-ring-parameter-flag.patch
 	patches.suse/ice-unify-logic-for-programming-PFINT_TSYN_MSK.patch
 	patches.suse/ice-restore-timestamp-configuration-after-device-res.patch
