--- a/series.conf
+++ b/series.conf
@@ -14377,6 +14377,7 @@
 	patches.suse/net-usb-qmi_wwan-claim-interface-4-for-ZTE-MF290.patch
 	patches.suse/octeontx2-pf-Fix-ntuple-rule-creation-to-direct-pack.patch
 	patches.suse/net-veth-fix-ethtool-stats-reporting.patch
+	patches.suse/amd-xgbe-handle-corner-case-during-sfp-hotplug.patch
 	patches.suse/ice-remove-ptp_tx-ring-parameter-flag.patch
 	patches.suse/ice-unify-logic-for-programming-PFINT_TSYN_MSK.patch
 	patches.suse/ice-restore-timestamp-configuration-after-device-res.patch
