--- a/series.conf
+++ b/series.conf
@@ -14378,6 +14378,7 @@
 	patches.suse/octeontx2-pf-Fix-ntuple-rule-creation-to-direct-pack.patch
 	patches.suse/net-veth-fix-ethtool-stats-reporting.patch
 	patches.suse/amd-xgbe-handle-corner-case-during-sfp-hotplug.patch
+	patches.suse/amd-xgbe-handle-the-corner-case-during-tx-completion.patch
 	patches.suse/ice-remove-ptp_tx-ring-parameter-flag.patch
 	patches.suse/ice-unify-logic-for-programming-PFINT_TSYN_MSK.patch
 	patches.suse/ice-restore-timestamp-configuration-after-device-res.patch
