amd-xgbe: propagate the correct speed and duplex status (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14379,6 +14379,7 @@
 	patches.suse/net-veth-fix-ethtool-stats-reporting.patch
 	patches.suse/amd-xgbe-handle-corner-case-during-sfp-hotplug.patch
 	patches.suse/amd-xgbe-handle-the-corner-case-during-tx-completion.patch
+	patches.suse/amd-xgbe-propagate-the-correct-speed-and-duplex-stat.patch
 	patches.suse/ice-remove-ptp_tx-ring-parameter-flag.patch
 	patches.suse/ice-unify-logic-for-programming-PFINT_TSYN_MSK.patch
 	patches.suse/ice-restore-timestamp-configuration-after-device-res.patch
