net: ipa: fix one GSI register field width (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14386,6 +14386,7 @@
 	patches.suse/i40e-Fix-adding-unsupported-cloud-filters.patch
 	patches.suse/net-axienet-Fix-check-for-partial-TX-checksum.patch
 	patches.suse/tls-fix-NULL-deref-on-tls_sw_splice_eof-with-empty-r.patch
+	patches.suse/net-ipa-fix-one-GSI-register-field-width.patch
 	patches.suse/tools-ynl-fix-duplicate-op-name-in-devlink.patch
 	patches.suse/HID-mcp2221-Set-driver-data-before-I2C-adapter-add.patch
 	patches.suse/HID-mcp2221-Allow-IO-to-start-during-probe.patch
