net: rswitch: Fix type of ret in rswitch_start_xmit() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14486,6 +14486,7 @@
 	patches.suse/mmc-cqhci-Fix-task-clearing-in-CQE-error-recovery.patch
 	patches.suse/mmc-sdhci-pci-gli-Disable-LPM-during-initialization.patch
 	patches.suse/mmc-sdhci-sprd-Fix-vqmmc-not-shutting-down-after-the.patch
+	patches.suse/net-rswitch-Fix-type-of-ret-in-rswitch_start_xmit.patch
 	patches.suse/ipv4-igmp-fix-refcnt-uaf-issue-when-receiving-igmp-q.patch
 	patches.suse/selftests-net-ipsec-fix-constant-out-of-range.patch
 	patches.suse/selftests-net-fix-a-char-signedness-issue.patch
