usb: gadget: core: remove unbalanced mutex_unlock in usb_gadget_activate (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -43053,6 +43053,7 @@
 	patches.suse/USB-quirks-add-quirk-for-Focusrite-Scarlett.patch
 	patches.suse/Revert-xhci-add-quirk-for-host-controllers-that-don-.patch
 	patches.suse/Revert-usb-dwc3-core-Enable-AutoRetry-feature-in-the.patch
+	patches.suse/usb-gadget-core-remove-unbalanced-mutex_unlock-in-us.patch
 	patches.suse/USB-gadget-Fix-the-memory-leak-in-raw_gadget-driver.patch
 	patches.suse/Revert-usb-xhci-tegra-Fix-error-check.patch
 	patches.suse/Revert-usb-gadget-tegra-xudc-Fix-error-check-in-tegr.patch
