net: stmmac: xgmac: Disable FPE MMC interrupts (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14497,6 +14497,7 @@
 	patches.suse/selftests-net-unix-fix-unused-variable-compiler-warn.patch
 	patches.suse/selftests-net-mptcp-fix-uninitialized-variable-warni.patch
 	patches.suse/octeontx2-af-Fix-possible-buffer-overflow.patch
+	patches.suse/net-stmmac-xgmac-Disable-FPE-MMC-interrupts.patch
 	patches.suse/octeontx2-pf-Fix-adding-mbox-work-queue-entry-when-n.patch
 	patches.suse/octeontx2-pf-Restore-TC-ingress-police-rules-when-in.patch
 	patches.suse/tools-ynl-gen-always-construct-struct-ynl_req_state.patch
