r8169: prevent potential deadlock in rtl8169_close (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14501,6 +14501,7 @@
 	patches.suse/octeontx2-pf-Fix-adding-mbox-work-queue-entry-when-n.patch
 	patches.suse/octeontx2-pf-Restore-TC-ingress-police-rules-when-in.patch
 	patches.suse/r8169-fix-deadlock-on-RTL8125-in-jumbo-mtu-mode.patch
+	patches.suse/r8169-prevent-potential-deadlock-in-rtl8169_close.patch
 	patches.suse/tools-ynl-gen-always-construct-struct-ynl_req_state.patch
 	patches.suse/bpf-Add-missed-allocation-hint-for-bpf_mem_cache_all.patch
 	patches.suse/wifi-iwlwifi-mvm-fix-an-error-code-in-iwl_mvm_mld_ad.patch
