netdevsim: Don't accept device bound programs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14504,6 +14504,7 @@
 	patches.suse/r8169-prevent-potential-deadlock-in-rtl8169_close.patch
 	patches.suse/ravb-Fix-races-between-ravb_tx_timeout_work-and-net-.patch
 	patches.suse/tools-ynl-gen-always-construct-struct-ynl_req_state.patch
+	patches.suse/netdevsim-Don-t-accept-device-bound-programs.patch
 	patches.suse/bpf-Add-missed-allocation-hint-for-bpf_mem_cache_all.patch
 	patches.suse/wifi-iwlwifi-mvm-fix-an-error-code-in-iwl_mvm_mld_ad.patch
 	patches.suse/wifi-mac80211-do-not-pass-AP_VLAN-vif-pointer-to-dri.patch
