usb: gadget: f_hid: fix report descriptor allocation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -44692,6 +44692,7 @@
 	patches.suse/ARM-PL011-Fix-DMA-support.patch
 	patches.suse/usb-typec-class-fix-typec_altmode_put_partner-to-put.patch
 	patches.suse/Revert-xhci-Loosen-RPM-as-default-policy-to-cover-fo.patch
+	patches.suse/usb-gadget-f_hid-fix-report-descriptor-allocation.patch
 	patches.suse/gpiolib-sysfs-Fix-error-handling-on-failed-export.patch
 	patches.suse/KVM-s390-vsie-fix-wrong-VIR-37-when-MSO-is-used.patch
 	patches.suse/KVM-s390-mm-Properly-reset-no-dat.patch
