usb: cdns: readd old API (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45789,6 +45789,7 @@
 	patches.kabi/scm-io_uring-kabi-workaround.patch
 	patches.kabi/USB-xhci-workaround-for-grace-period.patch
 	patches.kabi/mstat-skip-periodic-vmstat-update-for-isolated-CPUs-kabi.patch
+	patches.kabi/usb-cdns-readd-old-API.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
