docs/perf: Add ampere_cspmu to toctree to fix a build warning (jsc#PED-7859)

--- a/series.conf
+++ b/series.conf
@@ -12988,6 +12988,7 @@
 	patches.suse/perf-arm_cspmu-Support-implementation-specific-filters.patch
 	patches.suse/perf-arm_cspmu-Support-implementation-specific-validation.patch
 	patches.suse/perf-arm_cspmu-ampere_cspmu-Add-support-for-Ampere-SoC-PMU.patch
+	patches.suse/docs-perf-Add-ampere_cspmu-to-toctree-to-fix-a-build-warning.patch
 	patches.suse/clocksource-drivers-arm_arch_timer-limit-XGene-1-wor.patch
 	patches.suse/arm64-module-Fix-PLT-counting-when-CONFIG_RANDOMIZE_.patch
 	patches.suse/arm64-Restrict-CPU_BIG_ENDIAN-to-GNU-as-or-LLVM-IAS-.patch
