KVM: x86/pmu: Stop calling kvm_pmu_reset() at RESET (it's redundant) (jsc#PED-7322).

--- a/series.conf
+++ b/series.conf
@@ -16065,6 +16065,7 @@
 	patches.suse/KVM-SVM-VMX-Use-rip-relative-addressing-to-access-kv.patch
 	patches.suse/KVM-x86-pmu-Move-PMU-reset-logic-to-common-x86-code.patch
 	patches.suse/KVM-x86-pmu-Reset-the-PMU-i.e.-stop-counters-before-.patch
+	patches.suse/KVM-x86-pmu-Stop-calling-kvm_pmu_reset-at-RESET-it-s.patch
 	patches.suse/KVM-x86-Consolidate-flags-for-__linearize.patch
 	patches.suse/KVM-x86-Add-an-emulation-flag-for-implicit-system-ac.patch
 	patches.suse/KVM-x86-Add-X86EMUL_F_INVLPG-and-pass-it-in-em_invlp.patch
