KVM: x86: Introduce helper to handle Hyper-V paravirt TLB flush requests (jsc#PED-7322).

--- a/series.conf
+++ b/series.conf
@@ -16065,6 +16065,7 @@
 	patches.suse/KVM-x86-Introduce-helper-to-check-if-auto-EOI-is-set.patch
 	patches.suse/KVM-x86-Introduce-helper-to-check-if-vector-is-set-i.patch
 	patches.suse/KVM-VMX-Split-off-hyperv_evmcs.-ch.patch
+	patches.suse/KVM-x86-Introduce-helper-to-handle-Hyper-V-paravirt-.patch
 	patches.suse/KVM-x86-Turn-off-KVM_WERROR-by-default-for-all-confi.patch
 	patches.suse/KVM-x86-Advertise-CPUID.-EAX-7-ECX-2-EDX-5-0-to-user.patch
 	patches.suse/KVM-x86-Use-a-switch-statement-and-macros-in-__featu.patch
