platform/chrome: cros_ec_lpc: Remove EC panic shutdown timeout (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7106,6 +7106,7 @@
 	patches.suse/kselftest-arm64-Validate-that-changing-one-VL-type-does-not-affect-another.patch
 	patches.suse/kselftest-arm64-fix-a-memleak-in-zt_regs_run.patch
 	patches.suse/xen-remove-a-confusing-comment-on-auto-translated-gu.patch
+	patches.suse/platform-chrome-cros_ec_lpc-Remove-EC-panic-shutdown.patch
 	patches.suse/platform-chrome-chromeos_acpi-print-hex-string-for-A.patch
 	patches.suse/ACPICA-Fix-GCC-12-dangling-pointer-warning-7c94858e.patch
 	patches.suse/ACPICA-Modify-ACPI_STATE_COMMON-4f1094ba.patch
