KVM: nVMX: Introduce accessor to get Hyper-V eVMCS pointer (jsc#PED-7322).

--- a/series.conf
+++ b/series.conf
@@ -16070,6 +16070,7 @@
 	patches.suse/KVM-nVMX-Move-guest_cpuid_has_evmcs-to-hyperv.h.patch
 	patches.suse/KVM-x86-Make-Hyper-V-emulation-optional.patch
 	patches.suse/KVM-nVMX-Introduce-helpers-to-check-if-Hyper-V-evmpt.patch
+	patches.suse/KVM-nVMX-Introduce-accessor-to-get-Hyper-V-eVMCS-poi.patch
 	patches.suse/KVM-x86-Turn-off-KVM_WERROR-by-default-for-all-confi.patch
 	patches.suse/KVM-x86-Advertise-CPUID.-EAX-7-ECX-2-EDX-5-0-to-user.patch
 	patches.suse/KVM-x86-Use-a-switch-statement-and-macros-in-__featu.patch
