net: ravb: Make write access to CXR35 first before accessing other EMAC registers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14522,6 +14522,7 @@
 	patches.suse/net-libwx-fix-memory-leak-on-msix-entry.patch
 	patches.suse/net-ravb-Check-return-value-of-reset_control_deasser.patch
 	patches.suse/net-ravb-Use-pm_runtime_resume_and_get.patch
+	patches.suse/net-ravb-Make-write-access-to-CXR35-first-before-acc.patch
 	patches.suse/perf-kwork-Fix-a-build-error-on-32-bit.patch
 	patches.suse/perf-lock-contention-Fix-a-build-error-on-32-bit.patch
 	patches.suse/tools-headers-UAPI-Update-tools-s-copy-of-vhost.h-header.patch
