net: atlantic: Fix NULL dereference of skb pointer in (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14647,6 +14647,7 @@
 	patches.suse/ionic-fix-snprintf-format-length-warning.patch
 	patches.suse/ionic-Fix-dim-work-handling-in-split-interrupt-mode.patch
 	patches.suse/r8152-add-vendor-device-ID-pair-for-ASUS-USB-C2500.patch
+	patches.suse/net-atlantic-Fix-NULL-dereference-of-skb-pointer-in.patch
 	patches.suse/octeontx2-af-Adjust-Tx-credits-when-MCS-external-byp.patch
 	patches.suse/octeontx2-af-Fix-mcs-sa-cam-entries-size.patch
 	patches.suse/octeontx2-af-Fix-mcs-stats-register-address.patch
