net: hns: fix fake link up on xge port (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14649,6 +14649,7 @@
 	patches.suse/r8152-add-vendor-device-ID-pair-for-ASUS-USB-C2500.patch
 	patches.suse/net-atlantic-Fix-NULL-dereference-of-skb-pointer-in.patch
 	patches.suse/net-hns-fix-wrong-head-when-modify-the-tx-feature-wh.patch
+	patches.suse/net-hns-fix-fake-link-up-on-xge-port.patch
 	patches.suse/octeontx2-af-Adjust-Tx-credits-when-MCS-external-byp.patch
 	patches.suse/octeontx2-af-Fix-mcs-sa-cam-entries-size.patch
 	patches.suse/octeontx2-af-Fix-mcs-stats-register-address.patch
