nfp: flower: fix for take a mutex lock in soft irq context and rcu lock (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14659,6 +14659,7 @@
 	patches.suse/ice-Restore-fix-disabling-RX-VLAN-filtering.patch
 	patches.suse/i40e-Fix-unexpected-MFS-warning-message.patch
 	patches.suse/iavf-validate-tx_coalesce_usecs-even-if-rx_coalesce_.patch
+	patches.suse/nfp-flower-fix-for-take-a-mutex-lock-in-soft-irq-con.patch
 	patches.suse/bpf-Fix-a-verifier-bug-due-to-incorrect-branch-offse.patch
 	patches.suse/xsk-Skip-polling-event-check-for-unbound-socket.patch
 	patches.suse/netfilter-bpf-fix-bad-registration-on-nf_defrag.patch
