KVM x86/xen: add an override for PVCLOCK_TSC_STABLE_BIT (jsc#PED-7322).

--- a/series.conf
+++ b/series.conf
@@ -16100,6 +16100,7 @@
 	patches.suse/KVM-nSVM-Advertise-support-for-flush-by-ASID.patch
 	patches.suse/KVM-SVM-Explicitly-require-FLUSHBYASID-to-enable-SEV.patch
 	patches.suse/KVM-SVM-Don-t-intercept-IRET-when-injecting-NMI-and-.patch
+	patches.suse/KVM-x86-xen-add-an-override-for-PVCLOCK_TSC_STABLE_B.patch
 	patches.suse/KVM-x86-mmu-Fix-off-by-1-when-splitting-huge-pages-d.patch
 	patches.suse/KVM-x86-mmu-Check-for-leaf-SPTE-when-clearing-dirty-.patch
 	patches.suse/KVM-x86-mmu-remove-unnecessary-bool-shared-argument-0.patch
