x86/Kconfig: Transmeta Crusoe is CPU family 5, not 6 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16512,6 +16512,7 @@
 	patches.suse/hwmon-coretemp-Fix-out-of-bounds-memory-access.patch
 	patches.suse/hwmon-coretemp-Fix-bogus-core_id-to-attr-name-mappin.patch
 	patches.suse/nvme-host-fix-the-updating-of-the-firmware-version.patch
+	patches.suse/x86-Kconfig-Transmeta-Crusoe-is-CPU-family-5-not-6.patch
 
 	# tip/tip
 	patches.suse/x86-sev-Harden-VC-instruction-emulation-somewhat
