blacklist.conf: false positive

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -243,3 +243,5 @@ f96c48670319d685d18d50819ed0c1ef751ed2ac # Linus reverted that in the merge comm
 895ee5aefb7e24203de5dffae7ce9a02d78fa3d1 # suggested due to stable-6.6, but we have not taken the patch this reverts
 c5dbf04160005e07e8ca7232a7faa77ab1547ae0 # stupid cleanup that makes code worse
 5736aa9537c9b8927dec32d3d47c8c31fe560f62 # driver added only in v6.6
+fb097dcd5a28c0a2325632405c76a66777a6bed9 # later reverted
+3cb4f534bac010258b2688395c2f13459a932be9 # only v6.5 and later
