PCI: qcom: Clean up ASPM comment (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14861,6 +14861,7 @@
 	patches.suse/PCI-ASPM-Add-pci_enable_link_state_locked.patch
 	patches.suse/PCI-vmd-Fix-potential-deadlock-when-enabling-ASPM.patch
 	patches.suse/PCI-qcom-Fix-potential-deadlock-when-enabling-ASPM.patch
+	patches.suse/PCI-qcom-Clean-up-ASPM-comment.patch
 	patches.suse/Revert-PCI-acpiphp-Reassign-resources-on-bridge-if-n.patch
 	patches.suse/arm64-mm-Always-make-sw-dirty-PTEs-hw-dirty-in-pte_m.patch
 	patches.suse/ring-buffer-Fix-writing-to-the-buffer-with-max_data_size.patch
