PCI: dwc: Use FIELD_GET/PREP() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13286,6 +13286,7 @@
 	patches.suse/PCI-tegra194-Use-FIELD_GET-FIELD_PREP-with-Link-Widt.patch
 	patches.suse/PCI-mvebu-Use-FIELD_PREP-with-Link-Width.patch
 	patches.suse/PCI-Use-FIELD_GET-to-extract-Link-Width.patch
+	patches.suse/PCI-dwc-Use-FIELD_GET-PREP.patch
 	patches.suse/PCI-Use-FIELD_GET-in-Sapphire-RX-5600-XT-Pulse-quirk.patch
 	patches.suse/PCI-Prevent-xHCI-driver-from-claiming-AMD-VanGogh-US.patch
 	patches.suse/PCI-endpoint-Fix-double-free-in-__pci_epc_create.patch
