- KVM: remove CONFIG_HAVE_KVM_IRQFD (jsc#PED-7322). - Update config files.

--- a/series.conf
+++ b/series.conf
@@ -16056,6 +16056,7 @@
 	patches.suse/KVM-x86-Add-support-for-protected-VMs-that-can-utilize-private-m
 	patches.suse/KVM-guest-memfd-fix-unused-function-warning
 	patches.suse/KVM-remove-CONFIG_HAVE_KVM_EVENTFD.patch
+	patches.suse/KVM-remove-CONFIG_HAVE_KVM_IRQFD.patch
 	patches.suse/KVM-s390-vsie-Fix-STFLE-interpretive-execution-identification.patch
 	patches.suse/KVM-x86-add-missing-depends-on-KVM
 	patches.suse/KVM-x86-Harden-copying-of-userspace-array-against-ov.patch
