KVM: x86: Check irqchip mode before create PIT (jsc#PED-7322).

--- a/series.conf
+++ b/series.conf
@@ -16542,6 +16542,7 @@
 	patches.suse/misc-fastrpc-Mark-all-sessions-as-invalid-in-cb_remo.patch
 	patches.suse/KVM-s390-vsie-fix-race-during-shadow-creation.patch
 	patches.suse/KVM-s390-fix-cc-for-successful-PQAP.patch
+	patches.suse/KVM-x86-Check-irqchip-mode-before-create-PIT.patch
 	patches.suse/crypto-ccp-Fix-null-pointer-dereference-in-__sev_pla.patch
 	patches.suse/crypto-algif_hash-Remove-bogus-SGL-free-on-zero-leng.patch
 	patches.suse/selftests-net-cut-more-slack-for-gro-fwd-tests.patch
